fix for problem with fix for #8059.
git-svn-id: https://svn.code.sf.net/p/specify/code/trunk/Specify@8904 ce9bf4bf-376f-1848-a496-a1c9fe3b1a39